<resources>
    <string name="app_name">Attendance App - Part Two</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_attendants">Attendance List</string>
    <string name="title_events">Events List</string>
    <string name="title_registration">Create Attendant</string>


    <string name="hint_event_name">Event Name</string>
    <string name="hint_event_venue">Event Venue</string>
    <string name="hint_event_date">Event Date</string>
    <string name="hint_event_city">City</string>
    <string name="hint_event_image">Event Venue Image Url</string>
    <string name="set_as_active_event">Set As Active Event?</string>
    <string name="hint_guest_name">Name</string>
    <string name="hint_guest_email">Email</string>
    <string name="hint_guest_phone">Phone</string>
    <string name="hint_guest_street_address">Street Address</string>
    <string name="hint_guest_city">City</string>
    <string name="state">State</string>
    <string name="hint_zip_code">Zip Code</string>
    <string name="save">Save</string>
    <string name="hint_event_organizer">Organizer</string>
    <string name="title_create_event">Create Event</string>
    <string name="image_description">Event</string>
    <string name="button_profile">Profile</string>
    <string name="required_fields_empty">Required Field Empty</string>
    <string name="share">Share Event</string>
    <string name="delete_events">Delete Event</string>
    <string name="set_active_event">Set Event as Active</string>
    <string name="cancel">Cancel</string>
    <string name="add_event">Add Event</string>
    <string name="description_attendant_image">Attendant Image</string>
    <string name="pick_date">Event Date</string>

</resources>
