<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:id="@+id/relative_layout_add_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp"
        android:paddingRight="20dp"
        android:paddingBottom="5dp">
        <RelativeLayout
            android:id="@+id/relative_layout_attendant_image"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageButton
                android:id="@+id/pictureImageButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="12dp"
                android:background="@color/gray"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_action_camera"
                android:contentDescription="@string/description_attendant_image"/>
            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignBottom="@id/pictureImageButton"
                android:layout_alignRight="@id/pictureImageButton"
                android:contentDescription="@string/description_attendant_image"
                android:src="@drawable/ic_image_arrow"/>

        </RelativeLayout>
        <EditText
            android:id="@+id/edit_text_client_name"
            android:layout_below="@+id/relative_layout_attendant_image"
            style="@style/AddAttendantForm"
            android:hint="@string/hint_guest_name"
            android:imeOptions="actionNext" />
        <EditText
            android:id="@+id/edit_text_client_email"
            style="@style/AddAttendantForm"
            android:layout_below="@+id/edit_text_client_name"
            android:hint="@string/hint_guest_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/edit_text_client_phone"
            style="@style/AddAttendantForm"
            android:layout_below="@+id/edit_text_client_email"
            android:hint="@string/hint_guest_phone"
            android:imeOptions="actionNext"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/edit_text_client_street_address"
            style="@style/AddAttendantForm"
            android:hint="@string/hint_guest_street_address"
            android:layout_below="@+id/edit_text_client_phone"
            android:imeOptions="actionNext" />
        <EditText
            android:id="@+id/edit_text_client_city"
            style="@style/AddAttendantForm"
            android:layout_below="@+id/edit_text_client_street_address"
            android:hint="@string/hint_guest_city"
            android:imeOptions="actionNext" />
        <EditText
            android:id="@+id/edit_text_client_state"
            style="@style/AddAttendantForm"
            android:layout_below="@+id/edit_text_client_city"
            android:hint="@string/state"
            android:imeOptions="actionNext" />
        <EditText
            android:id="@+id/edit_text_client_zip_code"
            style="@style/AddAttendantForm"
            android:layout_below="@+id/edit_text_client_state"
            android:hint="@string/hint_zip_code"
            android:imeOptions="actionNext" />

        <Button
            android:id="@+id/save_button"
            android:textColor="#ffffff"
            android:layout_width="150dp"
            android:background="@color/primary"
            android:text="@string/save"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_client_zip_code"/>
    </RelativeLayout>
</ScrollView>